# chiefofstaff

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: CONTEXT.md  architecture.md  mvp-technical-spec.md  phase2-assessment.md
examples/: README.md
src/connectors/: README.md
src/mainframe/: config.py  main.py
src/mainframe/api/: schemas.py
src/mainframe/audit/: CONTEXT.md  __init__.py  logger.py  models.py  risk.py  store.py
src/mainframe/connectors/: CONTEXT.md  README.md  base.py  mock.py
src/mainframe/connectors/biz/: README.md
src/mainframe/connectors/im/: email.md  feishu.py  github.md  slack.md
src/mainframe/feedback/: CONTEXT.md  collector.py  schema.py
src/mainframe/input/: CONTEXT.md
src/mainframe/memory/: __init__.py  matcher.py  models.py  store.py
src/mainframe/processing/: CONTEXT.md  DEFERRED.md
src/mainframe/router/: CONTEXT.md  __init__.py  default_rules.py  engine.py  models.py
src/mainframe/understanding/: CONTEXT.md
src/mainframe/understanding/batch/: __init__.py  intent_extractor.py  models.py  pipeline.py  transcription.py
tests/: conftest.py  test_api.py  test_audit.py  test_intent_extractor.py  test_memory.py  test_models.py  test_pipeline.py  test_risk.py  test_router.py  test_store.py
